--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -1,4 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
+<app-news></app-news>
+
 <div style="text-align:center">
   <h1>
     Welcome to {{ title }}!
