--- a/jingdong/src/app/components/search/search.component.html
+++ b/jingdong/src/app/components/search/search.component.html
@@ -1,10 +1,10 @@
 <div class="search">
-    <input type="text" />
-    <button>搜索</button>
+    <input type="text" [(ngModel)]="keywords"/>
+    <button (click)="doSearch()">搜索</button>
 
     <hr />
 
     <ul>
-        <li>列表</li>
+        <li *ngFor="let item of historyList;let key=index">{{item}}  ---<button (click)="DelHistory(key)">X</button></li>
     </ul>
 </div>
