--- a/jingdong/src/app/components/search/search.component.scss
+++ b/jingdong/src/app/components/search/search.component.scss
@@ -3,5 +3,12 @@
     margin: 20px auto;
     input{
         margin-bottom: 20px;
+        margin-right: 10px;
+        width: 300px;
+        height: 18px;
+    }
+    button{
+        height: 24px;
+        width: 50px;
     }
 }
